# itensorpy

./: .pre-commit-config.yaml  DEPLOYMENT.md  MANIFEST.minimal.in  PACKAGING.md  README.md  logo  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.minimal.py  setup.py  setup.simple.py
.github/workflows/: create-release.yml  python-publish.yml  python-tests.yml
scripts/: build_for_pypi.py  build_with_old_setuptools.py  fix_linting.py  prepare_release.py
src/itensorpy/: __init__.py  curvature.py  metric.py  riemann.py
src/itensorpy.egg-info/: PKG-INFO  SOURCES.txt
src/itensorpy/differential_ops/: curl.py
src/itensorpy/matrix_ops/: determinant.py  eigen.py  linear_solve.py  multiplication.py
src/itensorpy/tensor_ops/: arithmetic.py  contraction.py  core.py  einsum.py  shape.py
tests/: test_curvature.py  test_einstein.py  test_integration.py  test_metric.py  test_ricci.py  test_spacetimes.py
