[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.19.0", "sympy>=1.7.1"]
build-b

[project]
name = "itensorpy"
version = "0.1.0"
description = "Symbolic and numerical tensor computations for general relativity"
readme = "README.md"
authors = [{ name = "Klaudiusz", email = "your@email.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "sympy>=1.11",
    "numpy>=1.23"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
